* Vertical align for currency on flex amount field type fixed.

--- a/css/public.css
+++ b/css/public.css
@@ -238,7 +238,7 @@
     border-color: #168612;
     box-shadow: inset 1px 1px 2px rgba(200, 200, 200, 0.5); }
 #leyka-payment-form .amount.flexible .currency {
-  vertical-align: top; }
+  vertical-align: middle; }
 #leyka-payment-form .amount.flexible select {
   vertical-align: middle;
   border-color: #ccc;
